--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <html>
-  <head>
-    <title>Valerio delle Fave</title>
-  </head>
-  
+
+<head>
+  <title>Valerio delle Fave</title>
+  <link rel="stylesheet" href="/style.css">
+</head>
+
 <body>
-  <h1>This is my website thanks to GitHub</h1>
   
+  <header>
+    <h1>This is my website thanks to GitHub</h1>
+  </header>
+
+  <main>
+    <h3>This is the page's main</h3>
+  </main>
+
+  <footer>
+    <h4>too far</h4>
+  </footer>
+
 </body>
-  
+
 </html>
