--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
 <head>
   <title>Valerio delle Fave</title>
   <link rel="stylesheet" href="/style.css">
+  <script src="/script.js"></script>
 </head>
 
 <body>
   
   <header>
-    <h1>This is my website thanks to GitHub</h1>
+    <div class="imageContainer">
+      <a href="#">
+        <img src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
+      </a>
+    </div>
+    <div class="menu">
+      <ul>
+        <li><a href="#">Item |</a></li>
+        <li><a href="#">Item |</a></li>
+        <li><a href="#">Item |</a></li>
+        <li><a href="#">Item</a></li>
+      </ul>
+    </div>
+    <div class="languageFlagContainer">
+      <a href="#">
+        <img src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
+      </a>
+    </div>
   </header>
 
   <main>
@@ -16,7 +34,10 @@
   </main>
 
   <footer>
-    <h4>too far</h4>
+    <h4>Contatti</h4>
+    <p>E-mail</p>
+    <p>Instagram</p>
+    <p>Linkedin</p>
   </footer>
 
 </body>
