added html + css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   
   <header>
-    <div class="imageContainer">
+    <div class="headerImageContainer">
       <a href="#">
         <img src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
       </a>
@@ -30,14 +30,129 @@
   </header>
 
   <main>
-    <h3>This is the page's main</h3>
+    <div id="chisono">
+      <div class="imageChiSonoContainer">
+        <a href="#">
+          <img src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
+        </a>
+      </div>
+      <div class="chiSonoSummaryContainer">
+        <p>Chi sono?</p>
+      </div>
+    </div>
+
+    <legend>Projects</legend>
+    <div id="projectsList">
+      <div class="projectIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div class="projectIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div class="projectIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div class="projectIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div class="projectIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+    </div>
+
+    <legend>Hard skills</legend>
+    <div id="hardSkills">
+      <div class="skillIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div class="skillIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div class="skillIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div class="skillIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div class="skillIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+    </div>
+
+    <legend>Hobby</legend>
+    <div id="hobbiesList">
+      <div class="hobbyIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div class="hobbyIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div class="hobbyIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div class="hobbyIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div class="hobbyIconContainer">
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+    </div>
   </main>
 
   <footer>
-    <h4>Contatti</h4>
-    <p>E-mail</p>
-    <p>Instagram</p>
-    <p>Linkedin</p>
+    <legend>Contatti</legend>
+    <div id="contactsList">
+      <div class="socialIconContainer">
+        <a href="">
+          <img src="" alt=""><p>E-mail</p>
+        </a>
+      </div>
+      <div class="socialIconContainer">
+        <a href="">
+          <img src="" alt=""><p>Instagram</p>
+        </a>
+      </div>
+      <div class="socialIconContainer">
+        <a href="">
+          <img src="" alt=""><p>Linkedin</p>
+        </a>
+      </div>
+      <div class="socialIconContainer">
+        <a href="">
+          <img src="" alt=""><p>GitHub</p>
+        </a>
+      </div>
+    </div>
   </footer>
 
 </body>
