added html + css + font

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>Valerio delle Fave</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="/style.css">
   <script src="/script.js"></script>
 </head>
@@ -16,15 +17,15 @@
     </div>
     <div class="menu">
       <ul>
-        <li><a href="#">Item |</a></li>
-        <li><a href="#">Item |</a></li>
-        <li><a href="#">Item |</a></li>
-        <li><a href="#">Item</a></li>
+        <li><a href="#chisono">Chi sono</a></li>
+        <li><a href="#projectsList">Progetti</a></li>
+        <li><a href="#hardSkills">Competenze</a></li>
+        <li><a href="#hobbiesList">Hobby</a></li>
       </ul>
     </div>
     <div class="languageFlagContainer">
       <a href="#">
-        <img src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
+        <img src="https://e7.pngegg.com/pngimages/586/985/png-clipart-united-nations-office-at-nairobi-unicef-model-united-nations-flag-of-the-united-nations-unite-miscellaneous-logo-thumbnail.png" alt="">
       </a>
     </div>
   </header>
@@ -37,11 +38,13 @@
         </a>
       </div>
       <div class="chiSonoSummaryContainer">
-        <p>Chi sono?</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus dui in sapien mattis, quis ullamcorper tortor fermentum. Vestibulum molestie feugiat nunc, nec mattis lectus luctus ac. Praesent quis eleifend tortor. Phasellus maximus placerat quam ac vulputate. Cras leo metus, aliquam et augue in, efficitur porttitor orci. Phasellus sodales, felis ut ornare posuere, est libero facilisis felis, sed euismod orci ipsum sit amet nibh. Donec aliquam fermentum felis, sed gravida orci volutpat ac. Mauris commodo imperdiet enim, id ullamcorper elit gravida ac. Suspendisse malesuada odio semper lacinia porta.
+        </p>
       </div>
     </div>
 
-    <legend>Projects</legend>
+    <legend>Projects</legend>       <!-- SlideShow -->
     <div id="projectsList">
       <div class="projectIconContainer">
         <a href="">
@@ -70,36 +73,51 @@
       </div>
     </div>
 
-    <legend>Hard skills</legend>
+    <legend>Hard skills</legend>     <!-- No slideshow -->
     <div id="hardSkills">
       <div class="skillIconContainer">
         <a href="">
-          <img src="" alt="">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/512px-HTML5_Badge.svg.png" alt="">
         </a>
       </div>
       <div class="skillIconContainer">
         <a href="">
-          <img src="" alt="">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/363px-CSS3_logo_and_wordmark.svg.png" alt="">
         </a>
       </div>
       <div class="skillIconContainer">
         <a href="">
-          <img src="" alt="">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Javascript_badge.svg/146px-Javascript_badge.svg.png" alt="">
         </a>
       </div>
       <div class="skillIconContainer">
         <a href="">
-          <img src="" alt="">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/PHP-logo.svg/711px-PHP-logo.svg.png" alt="">
         </a>
       </div>
       <div class="skillIconContainer">
         <a href="">
-          <img src="" alt="">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/JSON_vector_logo.svg/160px-JSON_vector_logo.svg.png" alt="">
+        </a>
+      </div>
+      <div class="skillIconContainer">
+        <a href="">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/30/Java_programming_language_logo.svg/1200px-Java_programming_language_logo.svg.png" alt="">
+        </a>
+      </div>
+      <div class="skillIconContainer">
+        <a href="">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/306px-ISO_C%2B%2B_Logo.svg.png" alt="">
+        </a>
+      </div>
+      <div class="skillIconContainer">
+        <a href="">
+          <img src="https://cdn.iconscout.com/icon/free/png-512/c-programming-569564.png" alt="">
         </a>
       </div>
     </div>
 
-    <legend>Hobby</legend>
+    <legend>Hobby</legend>            <!-- Slideshow -->
     <div id="hobbiesList">
       <div class="hobbyIconContainer">
         <a href="">
