header (done) + slideshow (todo)

--- a/index.html
+++ b/index.html
@@ -45,31 +45,17 @@
     </div>
 
     <legend>Projects</legend>       <!-- SlideShow -->
-    <div id="projectsList">
-      <div class="projectIconContainer">
-        <a href="">
-          <img src="" alt="">
-        </a>
+    <div id="projectsSlideShow">
+      <div class="projectSlide" href="">
+        <img class="previuosSlide" src="https://cdn.iconscout.com/icon/free/png-256/keyboard-left-arrow-1780092-1518653.png" alt="">
+          <img class="projectSlideImage" src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
+        <img class="nextSlide" src="https://static.thenounproject.com/png/2354422-200.png" alt="">
       </div>
-      <div class="projectIconContainer">
-        <a href="">
-          <img src="" alt="">
-        </a>
+      <div class="projectSlide" href="">
+        <img src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
       </div>
-      <div class="projectIconContainer">
-        <a href="">
-          <img src="" alt="">
-        </a>
-      </div>
-      <div class="projectIconContainer">
-        <a href="">
-          <img src="" alt="">
-        </a>
-      </div>
-      <div class="projectIconContainer">
-        <a href="">
-          <img src="" alt="">
-        </a>
+      <div class="projectSlide" href="">
+        <img src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
       </div>
     </div>
 
