mi sento ispirato html + css

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   </header>
 
   <main>
+    <legend>Chi sono</legend>
     <div id="chisono">
       <div class="imageChiSonoContainer">
         <a href="#">
@@ -44,82 +45,30 @@
       </div>
     </div>
 
-    <legend>Projects</legend>       <!-- SlideShow -->
+    <!-- SlideShow -->
     <div id="projectsSlideShow">
+      <legend>Projects</legend> 
+      <a class="previousSlide">&#10094;</a>
       <div class="projectSlide" href="">
-        <img class="previuosSlide" src="https://cdn.iconscout.com/icon/free/png-256/keyboard-left-arrow-1780092-1518653.png" alt="">
           <img class="projectSlideImage" src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
-        <img class="nextSlide" src="https://static.thenounproject.com/png/2354422-200.png" alt="">
       </div>
-      <div class="projectSlide" href="">
-        <img src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
-      </div>
-      <div class="projectSlide" href="">
-        <img src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
-      </div>
+      <a class="nextSlide">&#10095;</a>
     </div>
 
-    <legend>Hard skills</legend>     <!-- No slideshow -->
+
+    <!-- iFrame-->
     <div id="hardSkills">
+      <legend>Hard skills</legend> 
       <div class="skillIconContainer">
         <a href="">
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/512px-HTML5_Badge.svg.png" alt="">
         </a>
       </div>
-      <div class="skillIconContainer">
-        <a href="">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/363px-CSS3_logo_and_wordmark.svg.png" alt="">
-        </a>
-      </div>
-      <div class="skillIconContainer">
-        <a href="">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Javascript_badge.svg/146px-Javascript_badge.svg.png" alt="">
-        </a>
-      </div>
-      <div class="skillIconContainer">
-        <a href="">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/PHP-logo.svg/711px-PHP-logo.svg.png" alt="">
-        </a>
-      </div>
-      <div class="skillIconContainer">
-        <a href="">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/JSON_vector_logo.svg/160px-JSON_vector_logo.svg.png" alt="">
-        </a>
-      </div>
-      <div class="skillIconContainer">
-        <a href="">
-          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/30/Java_programming_language_logo.svg/1200px-Java_programming_language_logo.svg.png" alt="">
-        </a>
-      </div>
-      <div class="skillIconContainer">
-        <a href="">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/306px-ISO_C%2B%2B_Logo.svg.png" alt="">
-        </a>
-      </div>
-      <div class="skillIconContainer">
-        <a href="">
-          <img src="https://cdn.iconscout.com/icon/free/png-512/c-programming-569564.png" alt="">
-        </a>
-      </div>
     </div>
 
-    <legend>Hobby</legend>            <!-- Slideshow -->
-    <div id="hobbiesList">
-      <div class="hobbyIconContainer">
-        <a href="">
-          <img src="" alt="">
-        </a>
-      </div>
-      <div class="hobbyIconContainer">
-        <a href="">
-          <img src="" alt="">
-        </a>
-      </div>
-      <div class="hobbyIconContainer">
-        <a href="">
-          <img src="" alt="">
-        </a>
-      </div>
+    <!-- Slideshow -->
+    <div id="hobbiesSlideShow">
+      <legend>Hobby</legend>
       <div class="hobbyIconContainer">
         <a href="">
           <img src="" alt="">
