--- a/index.html
+++ b/index.html
@@ -9,103 +9,44 @@
 
 <body>
   
-  <header>
-    <div class="headerImageContainer">
-      <a href="#">
-        <img src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
-      </a>
+  <nav>
+    <div id="logoContainer">
+      <img src="Images/logo_ico.png" alt="logo" srcset="">
     </div>
-    <div class="menu">
-      <ul>
-        <li><a href="#chisono">Chi sono</a></li>
-        <li><a href="#projectsList">Progetti</a></li>
-        <li><a href="#hardSkills">Competenze</a></li>
-        <li><a href="#hobbiesList">Hobby</a></li>
-      </ul>
+    <div id="linksContainer">
+      <a href="#" class="active">Chi sono?</a>
+      <a href="#">Progetti</a>
+      <a href="#">Competenze</a>
+      <a href="#">Interessi</a>
+      <a href="#">Contatti</a>
     </div>
-    <div class="languageFlagContainer">
-      <a href="#">
-        <img src="https://e7.pngegg.com/pngimages/586/985/png-clipart-united-nations-office-at-nairobi-unicef-model-united-nations-flag-of-the-united-nations-unite-miscellaneous-logo-thumbnail.png" alt="">
-      </a>
+    <div id="languageContainer">
+      <img src="Images/language_ico.ico" alt="language" srcset="">
     </div>
-  </header>
+  </nav>
 
   <main>
-    <legend>Chi sono</legend>
-    <div id="chisono">
-      <div class="imageChiSonoContainer">
-        <a href="#">
-          <img src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
-        </a>
+    <div id="chiSono" style="height: 1024;">
+      <div class="titleContainer">
+        <img src="" alt="" width="100" height="100">
+        <p>Chi sono?</p>
       </div>
-      <div class="chiSonoSummaryContainer">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus dui in sapien mattis, quis ullamcorper tortor fermentum. Vestibulum molestie feugiat nunc, nec mattis lectus luctus ac. Praesent quis eleifend tortor. Phasellus maximus placerat quam ac vulputate. Cras leo metus, aliquam et augue in, efficitur porttitor orci. Phasellus sodales, felis ut ornare posuere, est libero facilisis felis, sed euismod orci ipsum sit amet nibh. Donec aliquam fermentum felis, sed gravida orci volutpat ac. Mauris commodo imperdiet enim, id ullamcorper elit gravida ac. Suspendisse malesuada odio semper lacinia porta.
-        </p>
+      <div class="contentContainer">
+        <div id="imageContentContainer">
+          <img src="" alt="" width="400" height="600">
+        </div>
+        
+        <div id="contentContainer">
+          <p class="content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sem leo, consectetur non ante ac, cursus accumsan odio. Morbi egestas elit sollicitudin, vulputate ex commodo, scelerisque lorem. Fusce eleifend sapien vitae pharetra volutpat. Proin finibus hendrerit odio, sed porttitor odio tristique eu. Vestibulum blandit eros lacinia, tincidunt turpis a, feugiat mauris. Quisque sit amet sapien aliquam, finibus odio nec, fermentum felis. Integer in massa consequat, porta velit quis, maximus enim.
+          </p>
+        </div>
       </div>
-    </div>
-
-    <!-- SlideShow -->
-    <div id="projectsSlideShow">
-      <legend>Projects</legend> 
-      <a class="previousSlide">&#10094;</a>
-      <div class="projectSlide" href="">
-          <img class="projectSlideImage" src="https://i.pinimg.com/originals/c5/f0/fa/c5f0fa5ac14327b8330fde1c621ffa8a.jpg" alt="">
-      </div>
-      <a class="nextSlide">&#10095;</a>
-    </div>
-
-
-    <!-- iFrame-->
-    <div id="hardSkills">
-      <legend>Hard skills</legend> 
-      <div class="skillIconContainer">
-        <a href="">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/512px-HTML5_Badge.svg.png" alt="">
-        </a>
-      </div>
-    </div>
-
-    <!-- Slideshow -->
-    <div id="hobbiesSlideShow">
-      <legend>Hobby</legend>
-      <div class="hobbyIconContainer">
-        <a href="">
-          <img src="" alt="">
-        </a>
-      </div>
-      <div class="hobbyIconContainer">
-        <a href="">
-          <img src="" alt="">
-        </a>
-      </div>
+      
     </div>
   </main>
 
   <footer>
-    <legend>Contatti</legend>
-    <div id="contactsList">
-      <div class="socialIconContainer">
-        <a href="">
-          <img src="" alt=""><p>E-mail</p>
-        </a>
-      </div>
-      <div class="socialIconContainer">
-        <a href="">
-          <img src="" alt=""><p>Instagram</p>
-        </a>
-      </div>
-      <div class="socialIconContainer">
-        <a href="">
-          <img src="" alt=""><p>Linkedin</p>
-        </a>
-      </div>
-      <div class="socialIconContainer">
-        <a href="">
-          <img src="" alt=""><p>GitHub</p>
-        </a>
-      </div>
-    </div>
   </footer>
 
 </body>
