added band + css content

--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
     
     <div class="container">
       <div class="titleContainer">
-        <img src="" alt="" width="100" height="100">
         <p>Chi sono?</p>
       </div>
       <div class="contentContainer">
         <div id="imageContentContainer">
-          <img src="" alt="" width="400" height="600">
+          <img src="" alt="">
         </div>
         
         <div id="contentContainer">
@@ -45,33 +44,36 @@
       </div>
     </div>
 
-    <hr>
+    <div class="band">
+      <p>~ Mens sana in corpore sano ~</p>
+    </div>
 
     <div class="container">
       <div class="titleContainer">
-        <img src="" alt="" width="100" height="100">
         <p>Progetti</p>
       </div>
       <div class="contentContainer">
       </div>
     </div>
 
-    <hr>
+    <div class="band">
+      <p>~ Mens sana in corpore sano ~</p>
+    </div>
 
     <div class="container">
       <div class="titleContainer">
-        <img src="" alt="" width="100" height="100">
         <p>Competenze</p>
       </div>
       <div class="contentContainer">
       </div>
     </div>
 
-    <hr>
+    <div class="band">
+      <p>~ Mens sana in corpore sano ~</p>
+    </div>
 
     <div class="container">
       <div class="titleContainer">
-        <img src="" alt="" width="100" height="100">
         <p>Interessi</p>
       </div>
       <div class="contentContainer">
@@ -81,7 +83,9 @@
   </main>
 
   <footer>
-    <p>Contatti</p>
+    <div class="orange">
+      <p>Contatti</p>
+    </div>
     <div class="container">
     </div>
   </footer>
