--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     </div>
 
     <div class="row">
-
+        <p class="rowContent">
+          ~ Mens sana in corpore sano ~  
+        </p>
     </div>
     
     <div id="progetti">
@@ -54,11 +56,20 @@
         <p>Progetti</p>
       </div>
       <div class="contentContainer">
-
+        <div class="slider">
+          <div class="previous">-|</div>
+          <img src="" alt="" class="sliderImage">
+          <div class="next">></div>
+        </div>
       </div>
     </div>
-  </main>
 
+    <div class="row">
+      <p class="rowContent">
+        ~ Mens sana in corpore sano ~  
+      </p>
+    </div>
+  </main>
   <footer>
   </footer>
 
