--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>Valerio delle Fave</title>
+  <link rel="icon" href="/icons/fav_icon.jpg">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="/style.css">
   <script src="/script.js"></script>
@@ -28,12 +29,12 @@
   <main>
     <div id="chiSono">
       <div class="titleContainer">
-        <img src="" alt="">
+        <img src="/icons/profile_icon.png" alt="">
         <p>Chi sono?</p>
       </div>
       <div class="contentContainer">
         <div class="imageContentContainer">
-          <img src="" alt="">
+          <img src="Images/chisono.png" alt="">
         </div>
         
         <div class="contentContainer">
@@ -52,14 +53,14 @@
     
     <div id="progetti">
       <div class="titleContainer">
-        <img src="" alt="">
+        <img src="/icons/project_icon.png" alt="">
         <p>Progetti</p>
       </div>
       <div class="contentContainer">
         <div class="slider">
-          <div class="previous">-|</div>
-          <img src="" alt="" class="sliderImage">
-          <div class="next">></div>
+          <div class="previous">&#10094;</div>
+          <img src="/Images/slider_image1.jpeg" alt="" class="sliderImage">
+          <div class="next">&#10095;</div>
         </div>
       </div>
     </div>
