--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
   
-  <nav>
+  <nav class="w-100">
     <div id="logoContainer">
       <img src="Images/logo_ico.png" alt="logo" srcset="">
     </div>
-    <div id="linksContainer">
-        <div><a href="#" class="active">Chi sono?</a></div>
-        <div><a href="#">Progetti</a></div>
+    <div id="linksContainer" class="w-100">
+        <div><a href="#chiSono" class="active">Chi sono?</a></div>
+        <div><a href="#progetti">Progetti</a></div>
         <div><a href="#">Competenze</a></div>
         <div><a href="#">Interessi</a></div>
         <div><a href="#">Contatti</a></div>
@@ -27,46 +27,46 @@
   </nav>
 
   <main>
-    <div id="chiSono">
-      <div class="titleContainer">
+    <div id="chiSono" class="w-100 paddingBottom-2">
+      <div class="titleContainer w-100 flex-center">
         <img src="/icons/profile_icon.png" alt="">
         <p>Chi sono?</p>
       </div>
-      <div class="contentContainer">
-        <div class="imageContentContainer">
+      <div class="flex-center">
+        <div class="paddingLeft-8 paddingRight-8">
           <img src="Images/chisono.png" alt="">
         </div>
         
-        <div class="contentContainer">
-          <p class="content">
+        <div class="flex-center paddingRight-8">
+          <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sem leo, consectetur non ante ac, cursus accumsan odio. Morbi egestas elit sollicitudin, vulputate ex commodo, scelerisque lorem. Fusce eleifend sapien vitae pharetra volutpat. Proin finibus hendrerit odio, sed porttitor odio tristique eu. Vestibulum blandit eros lacinia, tincidunt turpis a, feugiat mauris. Quisque sit amet sapien aliquam, finibus odio nec, fermentum felis. Integer in massa consequat, porta velit quis, maximus enim.
           </p>
         </div>
       </div>
     </div>
 
-    <div class="row">
-        <p class="rowContent">
+    <div class="row w-100 flex-center paddingBottom-2">
+        <p class="rowText">
           ~ Mens sana in corpore sano ~  
         </p>
     </div>
     
-    <div id="progetti">
-      <div class="titleContainer">
+    <div id="progetti" class="w-100 paddingBottom-2">
+      <div class="titleContainer flex-center">
         <img src="/icons/project_icon.png" alt="">
         <p>Progetti</p>
       </div>
-      <div class="contentContainer">
+      <div class="flex-center">
         <div class="slider">
-          <div class="previous">&#10094;</div>
-          <img src="/Images/slider_image1.jpeg" alt="" class="sliderImage">
-          <div class="next">&#10095;</div>
+          <div class="previous flex-center">&#10094;</div>
+          <img src="/Images/slider_image1.jpeg" alt="" class="sliderImage w-100">
+          <div class="next flex-center">&#10095;</div>
         </div>
       </div>
     </div>
 
-    <div class="row">
-      <p class="rowContent">
+    <div class="row w-100 flex-center paddingBottom-2">
+      <p class="rowText">
         ~ Mens sana in corpore sano ~  
       </p>
     </div>
