work in progress

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Valerio delle Fave</title>
-  <link rel="icon" href="/icons/fav_icon.jpg">
+  <link rel="icon" href="icons/in_progress.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="/style.css">
   <script src="/script.js"></script>
@@ -12,29 +12,29 @@
   
   <nav class="w-100">
     <div id="logoContainer">
-      <img src="Images/logo_ico.png" alt="logo" srcset="">
+      <img src="icons/in_progress.png" alt="logo" srcset="">
     </div>
     <div id="linksContainer" class="w-100">
-        <div><a href="#chiSono" class="active">Chi sono?</a></div>
-        <div><a href="#progetti">Progetti</a></div>
-        <div><a href="#">Competenze</a></div>
-        <div><a href="#">Interessi</a></div>
-        <div><a href="#">Contatti</a></div>
+        <div><a href="#chiSono" class="active">Lorem</a></div>
+        <div><a href="#progetti">Lorem</a></div>
+        <div><a href="#">Lorem</a></div>
+        <div><a href="#">Lorem</a></div>
+        <div><a href="#">Lorem</a></div>
     </div>
     <div id="languageContainer">
-      <img src="Images/language_ico.ico" alt="language" srcset="">
+      <img src="icons/in_progress.png" alt="language" srcset="">
     </div>
   </nav>
 
   <main>
     <div id="chiSono" class="w-100 paddingBottom-2">
       <div class="titleContainer w-100 flex-center">
-        <img src="/icons/profile_icon.png" alt="">
-        <p>Chi sono?</p>
+        <img src="icons/in_progress.png" alt="">
+        <p>Lorem</p>
       </div>
       <div class="flex-center">
         <div class="paddingLeft-8 paddingRight-8">
-          <img src="Images/chisono.png" alt="">
+          <img src="icons/in_progress.png" alt="">
         </div>
         
         <div class="flex-center paddingRight-8">
@@ -47,19 +47,19 @@
 
     <div class="row w-100 flex-center paddingBottom-2">
         <p class="rowText">
-          ~ Mens sana in corpore sano ~  
+          ~ Lorem ipsum dolor sit amet ~  
         </p>
     </div>
     
     <div id="progetti" class="w-100 paddingBottom-2">
       <div class="titleContainer flex-center">
-        <img src="/icons/project_icon.png" alt="">
-        <p>Progetti</p>
+        <img src="icons/in_progress.png" alt="">
+        <p>Lorem</p>
       </div>
       <div class="flex-center">
         <div class="slider">
           <div class="previous flex-center">&#10094;</div>
-          <img src="/Images/slider_image1.jpeg" alt="" class="sliderImage w-100">
+          <img src="icons/in_progress.png" alt="" class="sliderImage w-100">
           <div class="next flex-center">&#10095;</div>
         </div>
       </div>
@@ -67,7 +67,7 @@
 
     <div class="row w-100 flex-center paddingBottom-2">
       <p class="rowText">
-        ~ Mens sana in corpore sano ~  
+        ~ Lorem ipsum dolor sit amet  ~  
       </p>
     </div>
   </main>
