--- a/index.html
+++ b/index.html
@@ -58,9 +58,12 @@
       </div>
       <div class="flex-center">
         <div class="slider">
-          <div class="previous flex-center">&#10094;</div>
+          
           <img src="icons/in_progress.png" alt="" class="sliderImage w-100">
-          <div class="next flex-center">&#10095;</div>
+          <div class="flex-center">
+            <div class="previous flex-center">&#10094;</div>
+            <div class="next flex-center">&#10095;</div>
+          </div>
         </div>
       </div>
     </div>
@@ -70,6 +73,22 @@
         ~ Lorem ipsum dolor sit amet  ~  
       </p>
     </div>
+
+    <div id="competenze" class="w-100 paddingBottom-2">
+      <div class="titleContainer flex-center">
+        <img src="icons/in_progress.png" alt="">
+        <p>Lorem</p>
+      </div>
+      <div class="flex-center">
+        <div class="skills">
+          <div class="skill"><img src="icons/in_progress.png"></div>
+          <div class="skill"><img src="icons/in_progress.png"></div>
+          <div class="skill"><img src="icons/in_progress.png"></div>
+          <div class="skill"><img src="icons/in_progress.png"></div>
+        </div>
+      </div>
+    </div>
+
   </main>
   <footer>
   </footer>
