--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   
-  <nav class="w-100">
+  <nav id="navBar" class="w-100">
     <div id="logoContainer">
       <img src="icons/in_progress.png" alt="logo" srcset="" >
     </div>
