--- a/index.html
+++ b/index.html
@@ -85,12 +85,47 @@
           <div class="skill"><img src="icons/in_progress.png"></div>
           <div class="skill"><img src="icons/in_progress.png"></div>
           <div class="skill"><img src="icons/in_progress.png"></div>
+          <div class="skill"><img src="icons/in_progress.png"></div>
+          <div class="skill"><img src="icons/in_progress.png"></div>
+          <div class="skill"><img src="icons/in_progress.png"></div>
+          <div class="skill"><img src="icons/in_progress.png"></div>
+          <div class="skill"><img src="icons/in_progress.png"></div>
         </div>
       </div>
     </div>
 
+    <div class="row w-100 flex-center paddingBottom-2">
+      <p class="rowText">
+        ~ Lorem ipsum dolor sit amet  ~  
+      </p>
+    </div>
+
+    <div id="progetti" class="w-100 paddingBottom-2">
+      <div class="titleContainer flex-center">
+        <img src="icons/in_progress.png" alt="">
+        <p>Lorem</p>
+      </div>
+      <div class="flex-center">
+        <div class="slider">
+          
+          <img src="icons/in_progress.png" alt="" class="sliderImage w-100">
+          <div class="flex-center">
+            <div class="previous flex-center">&#10094;</div>
+            <div class="next flex-center">&#10095;</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </main>
-  <footer>
+  <footer class="w-100 paddingBottom-2">
+    <div class="titleContainer w-100 flex-center">
+      <p>Lorem</p>
+    </div>
+
+    </div>
+      
   </footer>
 
 </body>
