--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div id="linksContainer" class="w-100">
         <div><a href="#chiSono" class="active">Lorem</a></div>
         <div><a href="#progetti">Lorem</a></div>
-        <div><a href="#">Lorem</a></div>
-        <div><a href="#">Lorem</a></div>
-        <div><a href="#">Lorem</a></div>
+        <div><a href="#competenze">Lorem</a></div>
+        <div><a href="#hobby">Lorem</a></div>
+        <div><a href="#contacts">Lorem</a></div>
     </div>
     <div id="languageContainer">
       <img src="icons/in_progress.png" alt="language" srcset="">
@@ -44,7 +44,7 @@
       </div>
     </div>
 
-    <div class="row w-100 flex-center paddingBottom-2">
+    <div class="row w-100 flex-center">
         <p class="rowText">
           ~ Lorem ipsum dolor sit amet ~  
         </p>
@@ -68,7 +68,7 @@
       </div>
     </div>
 
-    <div class="row w-100 flex-center paddingBottom-2">
+    <div class="row w-100 flex-center">
       <p class="rowText">
         ~ Lorem ipsum dolor sit amet  ~  
       </p>
@@ -94,13 +94,13 @@
       </div>
     </div>
 
-    <div class="row w-100 flex-center paddingBottom-2">
+    <div class="row w-100 flex-center">
       <p class="rowText">
         ~ Lorem ipsum dolor sit amet  ~  
       </p>
     </div>
 
-    <div id="progetti" class="w-100 paddingBottom-2">
+    <div id="hobby" class="w-100 paddingBottom-2">
       <div class="titleContainer flex-center">
         <img src="icons/in_progress.png" alt="">
         <p>Lorem</p>
@@ -121,7 +121,7 @@
 
   </main>
 
-  <footer class="w-100">
+  <footer id="contacts" class="w-100">
     <div class="titleContainer flex-center">
       <p>Lorem</p>
     </div>
