--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <body>
   
-  <nav class="w-100">
+  <nav id="navBar" class="w-100">
     <div id="logoContainer">
       <img src="icons/in_progress.png" alt="logo" srcset="" >
     </div>
     <div id="linksContainer" class="w-100">
         <div><a href="#chiSono" class="active">Lorem</a></div>
         <div><a href="#progetti">Lorem</a></div>
-        <div><a href="#">Lorem</a></div>
-        <div><a href="#">Lorem</a></div>
-        <div><a href="#">Lorem</a></div>
+        <div><a href="#competenze">Lorem</a></div>
+        <div><a href="#hobby">Lorem</a></div>
+        <div><a href="#contacts">Lorem</a></div>
     </div>
     <div id="languageContainer">
       <img src="icons/in_progress.png" alt="language" srcset="">
@@ -36,7 +36,6 @@
         <div class="paddingLeft-8 paddingRight-8">
           <img src="icons/in_progress.png" alt="">
         </div>
-        
         <div class="flex-center paddingRight-8">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sem leo, consectetur non ante ac, cursus accumsan odio. Morbi egestas elit sollicitudin, vulputate ex commodo, scelerisque lorem. Fusce eleifend sapien vitae pharetra volutpat. Proin finibus hendrerit odio, sed porttitor odio tristique eu. Vestibulum blandit eros lacinia, tincidunt turpis a, feugiat mauris. Quisque sit amet sapien aliquam, finibus odio nec, fermentum felis. Integer in massa consequat, porta velit quis, maximus enim.
@@ -45,7 +44,7 @@
       </div>
     </div>
 
-    <div class="row w-100 flex-center paddingBottom-2">
+    <div class="row w-100 flex-center">
         <p class="rowText">
           ~ Lorem ipsum dolor sit amet ~  
         </p>
@@ -58,8 +57,9 @@
       </div>
       <div class="flex-center">
         <div class="slider">
-          
           <img src="icons/in_progress.png" alt="" class="sliderImage w-100">
+          <img src="icons/in_progress.png" alt="" class="sliderImage w-100 hidden">
+          <img src="icons/in_progress.png" alt="" class="sliderImage w-100 hidden">
           <div class="flex-center">
             <div class="previous flex-center">&#10094;</div>
             <div class="next flex-center">&#10095;</div>
@@ -68,7 +68,7 @@
       </div>
     </div>
 
-    <div class="row w-100 flex-center paddingBottom-2">
+    <div class="row w-100 flex-center">
       <p class="rowText">
         ~ Lorem ipsum dolor sit amet  ~  
       </p>
@@ -85,12 +85,61 @@
           <div class="skill"><img src="icons/in_progress.png"></div>
           <div class="skill"><img src="icons/in_progress.png"></div>
           <div class="skill"><img src="icons/in_progress.png"></div>
+          <div class="skill"><img src="icons/in_progress.png"></div>
+          <div class="skill"><img src="icons/in_progress.png"></div>
+          <div class="skill"><img src="icons/in_progress.png"></div>
+          <div class="skill"><img src="icons/in_progress.png"></div>
+          <div class="skill"><img src="icons/in_progress.png"></div>
         </div>
       </div>
     </div>
 
+    <div class="row w-100 flex-center">
+      <p class="rowText">
+        ~ Lorem ipsum dolor sit amet  ~  
+      </p>
+    </div>
+
+    <div id="hobby" class="w-100 paddingBottom-2">
+      <div class="titleContainer flex-center">
+        <img src="icons/in_progress.png" alt="">
+        <p>Lorem</p>
+      </div>
+      <div class="flex-center">
+        <div class="slider">
+          <img src="icons/in_progress.png" alt="" class="sliderImage w-100">
+          <img src="icons/in_progress.png" alt="" class="sliderImage w-100 hidden">
+          <img src="icons/in_progress.png" alt="" class="sliderImage w-100 hidden">
+          <div class="flex-center">
+            <div class="previous flex-center">&#10094;</div>
+            <div class="next flex-center">&#10095;</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </main>
-  <footer>
+
+  <footer id="contacts" class="w-100">
+    <div class="titleContainer flex-center">
+      <p>Lorem</p>
+    </div>
+    <div class="flex-center contactCards">
+      <div class="contactCard">
+        <img src="icons/in_progress.png" alt="">
+        <p>Lorem</p>
+      </div>
+      <div class="contactCard">
+        <img src="icons/in_progress.png" alt="">
+        <p>Lorem</p>
+      </div>
+      <div class="contactCard">
+        <img src="icons/in_progress.png" alt="">
+        <p>Lorem</p>
+      </div>
+    </div>
+      <p>Copyright © Valerio delle Fave. All Rights Reserved.</p>
   </footer>
 
 </body>
