added text and other

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <img src="icons/in_progress.png" alt="logo" srcset="" >
     </div>
     <div id="linksContainer" class="w-100">
-        <div><a href="#chiSono" class="active">Lorem</a></div>
-        <div><a href="#progetti">Lorem</a></div>
-        <div><a href="#competenze">Lorem</a></div>
-        <div><a href="#hobby">Lorem</a></div>
-        <div><a href="#contacts">Lorem</a></div>
+        <div><a href="#chiSono" class="active">Chi sono</a></div>
+        <div><a href="#progetti">Progetti</a></div>
+        <div><a href="#competenze">Competenze</a></div>
+        <div><a href="#hobby">Hobby</a></div>
+        <div><a href="#contatti">Contatti</a></div>
     </div>
     <div id="languageContainer">
       <img src="icons/in_progress.png" alt="language" srcset="">
@@ -30,7 +30,7 @@
     <div id="chiSono" class="w-100 paddingBottom-2">
       <div class="titleContainer w-100 flex-center">
         <img src="icons/in_progress.png" alt="">
-        <p>Lorem</p>
+        <p>Chi sono</p>
       </div>
       <div class="flex-center">
         <div class="paddingLeft-8 paddingRight-8">
@@ -46,14 +46,14 @@
 
     <div class="row w-100 flex-center">
         <p class="rowText">
-          ~ Lorem ipsum dolor sit amet ~  
+          ~ Solo comprenendo il dolore che infliggiamo agli altri, impariamo a essere migliori ~  
         </p>
     </div>
     
     <div id="progetti" class="w-100 paddingBottom-2">
       <div class="titleContainer flex-center">
         <img src="icons/in_progress.png" alt="">
-        <p>Lorem</p>
+        <p>Progetti</p>
       </div>
       <div class="flex-center">
         <div class="slider">
@@ -70,14 +70,14 @@
 
     <div class="row w-100 flex-center">
       <p class="rowText">
-        ~ Lorem ipsum dolor sit amet  ~  
+        ~ L'egoistico desiderio di mantenere la pace scatena le guerre  ~  
       </p>
     </div>
 
     <div id="competenze" class="w-100 paddingBottom-2">
       <div class="titleContainer flex-center">
         <img src="icons/in_progress.png" alt="">
-        <p>Lorem</p>
+        <p>Competenze</p>
       </div>
       <div class="flex-center">
         <div class="skills">
@@ -96,14 +96,14 @@
 
     <div class="row w-100 flex-center">
       <p class="rowText">
-        ~ Lorem ipsum dolor sit amet  ~  
+        ~ Conosci te stesso, quando capisci ciò che puoi fare e ciò che invece non potrai mai fare  ~  
       </p>
     </div>
 
     <div id="hobby" class="w-100 paddingBottom-2">
       <div class="titleContainer flex-center">
         <img src="icons/in_progress.png" alt="">
-        <p>Lorem</p>
+        <p>Hobby</p>
       </div>
       <div class="flex-center">
         <div class="slider">
@@ -118,25 +118,36 @@
       </div>
     </div>
 
-
   </main>
 
-  <footer id="contacts" class="w-100">
+  <footer id="contatti" class="w-100">
     <div class="titleContainer flex-center">
-      <p>Lorem</p>
+      <p>Contatti</p>
     </div>
     <div class="flex-center contactCards">
       <div class="contactCard">
         <img src="icons/in_progress.png" alt="">
-        <p>Lorem</p>
+        <p>E-mail</p>
       </div>
       <div class="contactCard">
         <img src="icons/in_progress.png" alt="">
-        <p>Lorem</p>
+        <p>Facebook</p>
       </div>
       <div class="contactCard">
         <img src="icons/in_progress.png" alt="">
-        <p>Lorem</p>
+        <p>GitHub</p>
+      </div>
+      <div class="contactCard">
+        <img src="icons/in_progress.png" alt="">
+        <p>Instagram</p>
+      </div>
+      <div class="contactCard">
+        <img src="icons/in_progress.png" alt="">
+        <p>LinkedIn</p>
+      </div>
+      <div class="contactCard">
+        <img src="icons/in_progress.png" alt="">
+        <p>Twitter</p>
       </div>
     </div>
       <p>Copyright © Valerio delle Fave. All Rights Reserved.</p>
