--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="icons/in_progress.png" alt="logo" srcset="" >
     </div>
     <div id="linksContainer" class="w-100">
-        <div><a href="#chiSono" class="active">Chi sono</a></div>
+        <div><a href="#presentazione" class="active">Presentazione</a></div>
         <div><a href="#progetti">Progetti</a></div>
         <div><a href="#competenze">Competenze</a></div>
         <div><a href="#hobby">Hobby</a></div>
@@ -26,11 +26,21 @@
     </div>
   </nav>
 
+  <div id="navigator" class="hidden">
+    <div>
+    <a href="#presentazione"><img src="icons/in_progress.png" alt="" class="w-100"></a>
+    <a href="#progetti "><img src="icons/in_progress.png" alt="" class="w-100"></a>
+    <a href="#competenze "><img src="icons/in_progress.png" alt="" class="w-100"></a>
+    <a href="#hobby"><img src="icons/in_progress.png" alt="" class="w-100"></a>
+    <a href="#contatti "><img src="icons/in_progress.png" alt="" class="w-100"></a>
+    </div>
+</div>
+
   <main>
-    <div id="chiSono" class="w-100 paddingBottom-2">
+    <div id="presentazione" class="w-100 paddingBottom-2">
       <div class="titleContainer w-100 flex-center">
         <img src="icons/in_progress.png" alt="">
-        <p>Chi sono</p>
+        <p>Presentazione</p>
       </div>
       <div class="flex-center">
         <div class="paddingLeft-8 paddingRight-8">
